# AI_Scraper

./: .env.example  .pre-commit-config.yaml  README.md  databricks.yml  precommit.yaml  pyproject.toml  setup.sh
.claude/: settings.local.json
resources/clusters/: job_cluster.yml
resources/jobs/: contact_search_job.yml  extraction_job.yml
resources/notebooks/: exploration.yml
resources/pipelines/: ingestion_pipeline.yml
src/: config.py  main.py  params.py
src/models/: contact.py  job.py
src/operations/: contact_search.py  extraction.py  fetch.py  processing.py
src/processor/: extractor.py  scorer.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/sources/: adzuna.py  guichet_emploi.py  scraper.py
src/transformations/: adzuna.py  base.py  contact.py  guichet_emploi.py
src/utils/: parser.py
tests/: test_fetch_process.py  test_models.py  test_operations.py  test_params.py  test_sources.py  test_transformations.py
