[tool.poetry]
name = "ai-scraper"
version = "0.1.0"
description = "Web Scraper assisté par IA avec résolution de CAPTCHA via Claude"
authors = ["Vince <vince@leretablissement.ca>"]
readme = "README.md"
packages = [{ include = "ai_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = ">=0.25.0"
openai = ">=1.30.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
Pillow = ">=10.0.0"
lxml = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
pre-commit = ">=3.7.0"

[tool.poetry.scripts]
ai-scraper = "ai_scraper.main:main"

# ─── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["ai_scraper"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (géré par le formateur)
    "B008",  # do not perform function calls in default args
]

[tool.ruff.lint.isort]
known-first-party = ["ai_scraper"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ─── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ai_scraper --cov-report=term-missing -v"

[tool.coverage.run]
source = ["ai_scraper"]
omit = ["tests/*"]

# ─── Build ────────────────────────────────────────────────────────────────────

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
